# SakuraEngine

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists-deperated.txt  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  setup.lua  xmake.lua
samples/cgpu-3d/: CMakeLists.txt  cgpu-3d.cpp  cgpu-renderer.cpp  cgpu-resources.cpp  render-context.hpp  render-device.hpp  render-resources.cpp  render-resources.hpp  render-scene.cpp  render-scene.hpp  shaders.h
samples/cgpu-3d/resources/: scene.gltf
samples/cgpu-3d/shaders/: fragment_shader.ps_6_0.hlsl  vertex_shader.vs_6_0.hlsl
samples/cgpu-indexed-instance/: CMakeLists.txt  indexed-instance.c  utils.h
samples/cgpu-indexed-instance/shaders/: fragment_shader.ps_6_0.hlsl  vertex_shader.vs_6_0.hlsl
samples/cgpu-mandelbrot/: CMakeLists.txt  embed-shaders.h  lodepng.c  lodepng.h  mandelbrot.c
samples/cgpu-texture/: CMakeLists.txt  texture.c  texture.h  utils.h
samples/cgpu-texture/shaders/: fragment_shader.ps_6_0.hlsl  vertex_shader.vs_6_0.hlsl
samples/cgpu-triangle/: CMakeLists.txt  compile_32.bat  filewatch.hpp  triangle.c  triangle_module.c  triangle_module.wa.c  utils.h  wasm_modules.cpp  window_helper.h
samples/cgpu/cgpu-3d/: CMakeLists.txt  cgpu-3d.cpp  cgpu-renderer.cpp  render-device.hpp  render-resources.cpp  render-resources.hpp  render-scene.cpp  render-scene.hpp
samples/cgpu/cgpu-mandelbrot/: CMakeLists.txt  mandelbrot.zig
samples/hot-triangle/: CMakeLists.txt  hot_wasm.cpp  triangle.c  triangle_module.wa.c
samples/hot-triangle/shaders/: vertex_shader.vs_6_0.hlsl
samples/rg-deferred/: CMakeLists.txt  blit_pipeline.h  cube_geometry.h  deferred.cpp  gbuffer_pipeline.h  lighting_pipeline.h  pass_profiler.h
samples/rg-deferred/shaders/: fragment_shader.ps_6_0.hlsl  gbuffer_fs.ps_6_0.hlsl  gbuffer_vs.vs_6_0.hlsl  lighting_cs.cs_6_0.hlsl  lighting_fs.ps_6_0.hlsl  screen_vs.vs_6_0.hlsl  vertex_shader.vs_6_0.hlsl
tests/: CMakeLists.txt  xmake.lua
tests/async/: xmake.lua
tests/async/marl-test/: calls_test.cpp  conditionvariable_test.cpp  containers_test.cpp  defer_test.cpp  event_test.cpp  marl_test.cpp  marl_test.h  osfiber_test.cpp  pool_test.cpp  scheduler_test.cpp  thread_test.cpp  ticket_test.cpp
tests/async/task2/: main.cpp
tests/async/threads/: job.cpp  service_thread.cpp  threads.cpp
tests/base/: xmake.lua
tests/base/algo/: bit.cpp  intro_sort.cpp  test_binary_search.cpp  test_bit_algo.cpp  test_heap.cpp  test_intro_sort.cpp  test_merge_sort.cpp  test_unicode.cpp
tests/base/containers/: array.cpp  bit_array.cpp  container_test_types.hpp  skr_test_allocator.hpp  sparse_array.cpp  sparse_hash_map.cpp  sparse_hash_set.cpp  test_array.cpp  test_bit_array.cpp  test_bit_set.cpp  test_bit_vector.cpp  test_expected.cpp  test_multi_sparse_hash_map.cpp  test_multi_sparse_hash_set.cpp  test_optional.cpp  test_ring_buffer.cpp  test_sparse_array.cpp  test_sparse_hash_map.cpp  test_sparse_hash_set.cpp  test_sparse_vector.cpp  test_string.cpp  test_string_view.cpp  test_types.hpp  test_vector.cpp
tests/binary/: bitpack.cpp  xmake.lua
tests/cgpu/: Common.cpp  xmake.lua
tests/cgpu/DeviceInitialize/: CMakeLists.txt  DeviceInitialize.cpp
tests/cgpu/Exts/: CMakeLists.txt  D3DDeviceExts.cpp  VkDeviceExts.cpp
tests/cgpu/QueueOperations/: CMakeLists.txt  QueueOperations.cpp
tests/cgpu/ResourceCreation/: CMakeLists.txt  ResourceCreation.cpp  dxil.h  spirv.h
tests/cgpu/RootSignaturePool/: RootSignaturePool.cpp
tests/cgpu/ShaderCreation/: CMakeLists.txt  ShaderCreation.cpp  spirv.h
tests/cgpu/SwapChainCreation/: CMakeLists.txt  SwapChainCreation.cpp
tests/core/: xmake.lua
tests/core/containers/: skr_test_allocator.hpp  test_multi_sparse_hash_set.cpp
tests/core/json/: main.cpp
tests/core/serde/: binary.cpp  bitpack.cpp  json.cpp  main.cpp
tests/daS/: xmake.lua
tests/daS/daSTest1/: main.cpp  test.das
tests/daS/daSTestAOT/: main.cpp  test.das
tests/daS/daSTestHybrid/: main.cpp
tests/daS/daSTestInterpret/: main.cpp
tests/daS/dasCo/: co.das  main.cpp
tests/daS/dasStackwalk/: main.cpp  stackwalk.das
tests/daS/dasTestAnnotation/: annotation.das  annotation_compiler.cpp  annotation_module.hpp  test_annotation.cpp
tests/ecs/: xmake.lua
tests/ecs/capi/: guid.hpp  main.cpp
tests/framework/src/: framework.cpp
tests/fs/: xmake.lua
tests/fs/test/: main.cpp
tests/hotfix/: hotfix_module.cpp  hotfix_module.hpp  main.cpp  xmake.lua
tests/math/: CMakeLists.txt  xmake.lua
tests/math/Common/: CMakeLists.txt  CommonMath.cpp
tests/math/Graph/: CMakeLists.txt  Graph.cpp
tests/math/base/: base.cpp
tests/memory/: CMakeLists.txt  memory.cpp  xmake.lua
tests/memory/SSM/: test_ssm.cpp
tests/memory/mmap/: test_mmap.cpp
tests/meta-system/: xmake.lua
tests/meta_system/: xmake.lua
tests/meta_system/meta_scripts/: install_test.py  test.py  test_framework.py
tests/meta_system/src/: main.cpp
tests/module/: xmake.lua
tests/module/test/: dynamic0.cpp  dynamic1.cpp  dynamic2.cpp  dynamic3.cpp  main.cpp  static0.cpp  static0.hpp
tests/platform/: xmake.lua
tests/platform/marl-test/: blockingcall_test.cpp  conditionvariable_test.cpp  dag_test.cpp  event_test.cpp  marl_test.cpp  marl_test.h  memory_test.cpp  osfiber_test.cpp  parallelize_test.cpp  pool_test.cpp  scheduler_test.cpp  waitgroup_test.cpp
tests/platform/task2/: main.cpp
tests/platform/threads/: job.cpp  service_thread.cpp  threads.cpp
tests/render-setup/: CMakeLists.txt  setup.cpp
tests/resource/: xmake.lua
tests/resource/design/: main.cpp
tests/rtti/: rtti.cpp  typeid.cpp  xmake.lua
tests/rtti/rtti/: rtti.cpp
tests/rtti/sptr/: base.cpp  common.cpp  intrusive.cpp  non-intrusive.cpp  test.cpp  test.hpp
tests/rtti/types/: types.cpp  types.hpp  types2.hpp
tests/runtime/: xmake.lua
tests/runtime/ecs/: cpp_style.cpp  guid.hpp  main.cpp
tests/serde/: binary.cpp  bitpack.cpp  json.cpp  main.cpp  xmake.lua
tests/shared/: vkdevice.cpp
tests/stl/: test_array.cpp  xmake.lua
tests/wasm/: CMakeLists.txt  wasm.bin.h
tests/window-exts/: CMakeLists.txt  win_ext.cpp
(+4972 files in other folders)
